--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.html",
   "scripts": {
     "dev": "parcel index.html",
+    "start": "parcel index.html --open",
     "build": "rm -rf dist && parcel build index.html"
   },
   "dependencies": {
