--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,3 @@
-# OS files
-.DS_Store
-node_modules
-.cache/
-
-# Yarn files
-yarn.lock
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-*.sublime-*
-
-# Build files
-.env
+node_modules/
 dist/
+*.log
