--- a/package.json
+++ b/package.json
@@ -1,25 +1,38 @@
 {
-  "name": "burger-menu",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.html",
   "scripts": {
-    "dev": "parcel index.html",
-    "start": "parcel index.html --open",
-    "build": "rm -rf dist && parcel build index.html"
-  },
-  "dependencies": {
-    "autoprefixer": "9.7.4",
-    "postcss": "7.0.27",
-    "tailwindcss": "1.2.0"
+    "dev": "meta dev",
+    "build": "meta build",
+    "lint": "npm run lint:scripts && npm run lint:styles && npm run lint:templates",
+    "lint:scripts": "eslint src/js --ext=.js,.vue",
+    "lint:styles": "stylelint 'src/**/*.(scss|vue)'",
+    "lint:templates": "prettier -c src/templates/",
+    "fix": "npm run fix:scripts && npm run fix:styles && npm run fix:templates",
+    "fix:scripts": "npm run lint:scripts -- --fix",
+    "fix:styles": "npm run lint:styles -- --fix",
+    "fix:templates": "npm run lint:templates -- --write"
   },
   "devDependencies": {
-    "@babel/core": "7.2.0",
-    "@studiometa/eslint-config": "^2.0.3",
-    "@studiometa/prettier-config": "^2.0.0",
-    "eslint": "^6.8.0",
-    "parcel-bundler": "^1.6.1",
-    "prettier": "^1.19.1"
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@studiometa/browserslist-config": "^1.0.1",
+    "@studiometa/eslint-config": "^2.1.2",
+    "@studiometa/prettier-config": "^2.0.1",
+    "@studiometa/stylelint-config": "^2.0.0",
+    "@studiometa/tailwind-config": "^1.0.2",
+    "@studiometa/webpack-config": "^2.1.3",
+    "autoprefixer": "^9.8.6",
+    "cssnano": "^4.1.10",
+    "eslint": "^7.9.0",
+    "html-webpack-plugin": "^4.5.0",
+    "prettier": "^2.1.2",
+    "prettier-plugin-twig-melody": "^0.4.6",
+    "raw-loader": "^4.0.1",
+    "stylelint": "^13.7.1",
+    "tailwindcss": "^1.8.10",
+    "twig-html-loader": "^0.1.8"
   },
-  "keywords": []
+  "dependencies": {
+    "@studiometa/js-toolkit": "^1.0.0-alpha.13"
+  }
 }
